add age detector and gender detector for sample-java